test/cases/compile_errors/extern_no_initializer.zig
extern var foo = 1;
extern const bar = 2;
// error
//
// :1:18: error: extern variables have no initializers
// :2:20: error: extern variables have no initializers
